<resources>
    <string name="app_name">NACtive</string>

    <!-- Buttons -->
    <string name="setup_btn_text">Setup</string>
    <string name="information_btn_text">Information</string>
    <string name="exercises_activity_btn_text">Exercise</string>
    <string name="exercise_start_btn_text">Start</string>
    <string name="exercise_pause_btn_text">Pause</string>
    <string name="exercise_stop_btn_text">Stop</string>
    <string name="exercise_finish_btn_text">Finish</string>
    <string name="information_guides_btn_text">Exercise Guide</string>
    <string name="main_userdiary_btn_text">Diary</string>
    <string name="information_faq_btn_text">FAQ</string>
    <string name="information_has_btn_text">Health and Safety</string>
    <string name="information_contacts_btn_text">Contacts</string>
    <string name="setup_user_btn_text">User</string>
    <string name="setup_app_settings_btn_text">Options</string>
    <string name="setup_session_btn_text">Exercise Routines</string>
    <string name="setup_exercise_btn_text">Exercise</string>
    <string name="setup_save_btn_txt">Save</string>
    <string name="home_btn_txt">Home</string>
    <string name="sign_out_btn_txt">Sign Out</string>
    <string name="nongooglesignin_btn_txt">Sign In(Without Google)</string>
    <string name="revoke_access_btn_txt">Revoke Google Access</string>
    <string name="eSetup_save_btn">Save as new exercise</string>
    <string name="wSetup_save_btn">Save as new Work Out</string>
    <string name="wSetup_update_btn">Update Work Out</string>
    <string name="eSetup_update_btn">Update Exercise</string>
    <string name="eSetup_delete_btn">Delete Exercise</string>
    <string name="eSetup_addSteps_btn">Add Step</string>
    <string name="start_workout_string">Start Work Out</string>
    <string name="back_to_setup_string">Back to Setup</string>
    <string name="eSetup_SupportToggle">Support</string>
    <string name="new_workout_string">New Workout</string>

    <!-- Text -->
    <string name="nactivemotto">Let\'s get NACTIVE</string>
    <string name="setup_name_label_text">Name: </string>
    <string name="setup_password_label_text">Password: </string>
    <string name="setup_description_label_text">Description: </string>
    <string name="setup_difficulty_label_text">Difficulty: </string>
    <string name="setup_repetitions_label_text">Repetitions: </string>
    <string name="setup_videolocation_label_text">Video Location: </string>
    <string name="times_complete">Completed: </string>
    <string name="eSetup_steps_label_text">Steps: </string>
    <string name="minTime_label_text">Fastest Time: </string>
    <string name="new_user_name">Please enter your name here</string>
    <string name="user_info_start">User Info</string>
    <string name="user_info_creation_date">Creation Date: </string>
    <string name="user_info_next_session">Next Session: </string>
    <string name="user_info_previous_session">Previous Session: </string>
    <string name="user_info_current_session">Current Session: </string>
    <string name="setup_name_edit_hint">Enter Name Here</string>
    <string name="setup_desc_edit_hint">Enter Description Here</string>
    <string name="wsetup_add_exercises">Add Exercises</string>
    <string name="wSetup_current_exercises">Current Exercises</string>
    <string name="area_of_focus">Area of Focus</string>
    <string name="wFrequency_Random">Random</string>
    <string name="wFrequency_Scheduled">Scheduled</string>
    <string name="wFrequency_Always">Always</string>
    <string name="new_exercise_string">New Exercise</string>
    <string name="edit_work_out_string">Edit a Workout</string>
    <string name="edit_an_exercise">Edit an Exercise</string>

    <!-- Content Description -->
    <string name="naclogocd">NAC Logo</string>

    <!-- Choose File Location -->
    <string name="title_choose_file">Choose Video</string>
    <string name="choose_file">OK</string>
    <string name="cancel">CANCEL</string>

    <string-array name="fileFormats">
        <item>.mp4</item>
        <item>.mkv</item>
        <item>.avi</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
