<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context="au.org.nac.nactive.NACtive.EditWorkOut"
        tools:layout_editor_absoluteY="89dp">

    <TextView
            style="@style/NACLabelText"
            android:text="@string/wsetup_add_exercises"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/wExercisesRV"
            android:id="@+id/wsaelabel"/>
    <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/wExercisesRV"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/workOutButtonBar"
            android:layout_toStartOf="@+id/workOutLists"
            >
    </ListView>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/workoutdetailslayout"
            android:layout_alignStart="@+id/workoutdetailslayout"
            android:layout_alignEnd="@+id/workoutdetailslayout"
            android:layout_centerInParent="true"
            android:id="@+id/workOutLists">

        <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/wSetup_Current_Exercises"
                android:layout_weight="0"/>

        <TextView
                android:text="@string/wSetup_current_exercises"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/wscelabel"
                android:layout_weight="0"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:id="@+id/workoutdetailslayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            tools:layout_editor_absoluteY="80dp"
            tools:layout_editor_absoluteX="364dp">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:id="@+id/wSetup_name_layout"
                android:layout_height="wrap_content">

            <TextView
                    style="@style/NACLabelText"
                    android:text="@string/setup_name_label_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/wSetup_name_textView"
                    android:layout_weight="0"/>

            <EditText
                    style="@style/NACEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/setup_name_label_text"
                    android:ems="10"
                    android:id="@+id/wSetup_name_editText"
                    android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:id="@+id/wSetup_BodyPart_Layout"
                android:layout_height="match_parent">

            <TextView
                    style="@style/NACLabelText"
                    android:text="@string/area_of_focus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/wAoFText"
                    android:layout_weight="0"/>

            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/wAoFSpinner"
                    android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    style="@style/NACEditText"
                    android:text="@string/times_complete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/wSetup_Time_Complete_Label"
                    android:layout_weight="0"/>

            <TextView
                    style="@style/NACEditText"
                    android:text="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/wSetup_Time_Complete_Value_textView"
                    android:layout_weight="1"/>

            <TextView
                    style="@style/NACEditText"
                    android:text="@string/minTime_label_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/wSetup_minTime_Label"
                    android:layout_weight="0"/>

            <TextView
                    style="@style/NACEditText"
                    android:text="00:00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/wSetup_minTime_Value_textView"
                    android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_above="@+id/wSetup_work_out_schedule_list"
            android:id="@+id/wFreq_RadioGroup"
            tools:layout_editor_absoluteY="33dp"
            android:layout_alignParentEnd="true"
            tools:layout_editor_absoluteX="1007dp">

        <RadioButton
                android:text="@string/wFrequency_Always"
                android:textColor="@color/icons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/wFreq_Always_RB"
                android:layout_weight="0"/>

        <RadioButton
                android:text="@string/wFrequency_Scheduled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/icons"
                android:id="@+id/wFreq_Scheduled_RB"
                android:layout_weight="0"/>

        <RadioButton
                android:text="@string/wFrequency_Random"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/icons"
                android:id="@+id/wFreq_Random_RB"
                android:layout_weight="0"/>
    </RadioGroup>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            tools:layout_editor_absoluteY="507dp"
            tools:layout_editor_absoluteX="56dp"
            android:id="@+id/workOutButtonBar">

        <Button
                style="@style/NACActionButton"
                android:text="@string/wSetup_save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/wSetup_Save_btn"/>

        <Button
                style="@style/NACActionButton"
                android:text="@string/wSetup_update_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smlMargin"
                android:layout_marginBottom="@dimen/smlMargin"
                android:id="@+id/wSetup_Update_btn"/>
    </LinearLayout>

    <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/wSetup_work_out_schedule_list"
            android:layout_marginTop="67dp"
            android:layout_below="@+id/workoutdetailslayout"
            android:layout_toEndOf="@+id/workOutLists"/>

</RelativeLayout>
