<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainbgcolor"
        tools:context="au.org.nac.nactive.NACtive.Information">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <Button
                    style="@style/NACActionButton"
                    android:text="@string/information_guides_btn_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:id="@+id/information_guides_btn"
                    android:layout_weight="1"/>

            <Button
                    style="@style/NACActionButton"
                    android:text="@string/information_faq_btn_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:id="@+id/information_faq_btn"
                    android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <Button
                    style="@style/NACActionButton"
                    android:text="@string/information_has_btn_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:id="@+id/information_has_btn"
                    android:layout_weight="1"/>

            <Button
                    style="@style/NACActionButton"
                    android:text="@string/information_contacts_btn_text"
                    android:layout_width="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/information_contact_btn"
                    android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:id="@+id/infotextbox"/>

</RelativeLayout>
