<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="au.org.nac.nactive.nactive.ExercisesActivity">

    <VideoView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/controlsLayout"
            android:id="@+id/videoView"/>

    <LinearLayout
            android:id="@+id/controlsLayout"
            android:orientation="vertical"
            android:background="@color/mainbgcolor"
            android:layout_width="300dp"
            android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/listbgcolor"
                android:layout_weight="0"/>

        <LinearLayout
                android:id="@+id/buttonPanelLayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/mainbgcolor"
                android:layout_weight="0">

            <Button
                    style="@style/NACActionButton"
                    android:text="@string/exercise_start_btn_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/exercise_play_btn"/>

            <Button
                    style="@style/NACActionButton"
                    android:text="@string/exercise_pause_btn_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:id="@+id/exercise_pause_btn"/>

            <Button
                    style="@style/NACActionButton"
                    android:text="@string/exercise_stop_btn_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
