<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="au.org.nac.nactive.fragments.ExerciseSetupFragment">


    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/exercise_setup_text_layout"
            android:id="@+id/exercise_setup_difficulty_layout">

        <TextView
                android:text="@string/setup_name_label_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/exercise_setup_difficulty_label"
                android:layout_weight="1"/>

        <ImageView
                android:src="@drawable/diffstaron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/exercise_diff_level_1"
                android:layout_weight="1"/>

        <ImageView
                android:src="@drawable/diffstaroff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/exercise_diff_level_2"
                android:layout_weight="1"/>

        <ImageView
                android:src="@drawable/diffstaroff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/exercise_diff_level_3"
                android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/exercise_setup_text_layout">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/exercise_setup_name_layout">

            <TextView
                    android:text="@string/setup_name_label_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/exercise_setup_name_label"
                    android:layout_weight="0"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/setup_name_edit_hint"
                    android:ems="10"
                    android:id="@+id/exercise_setup_name_edittext"
                    android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/setup_description_label_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/exercise_setup_description_label"
                    android:layout_weight="0"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/setup_desc_edit_hint"
                    android:ems="10"
                    android:id="@+id/exercise_setup_description_edittext"
                    android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="Name"
                    android:ems="10"
                    android:id="@+id/editText2"
                    android:layout_weight="1"/>

            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
